增加操作系统笔记

--- a/操作系统/操作系统笔记.md
+++ b/操作系统/操作系统笔记.md
@@ -559,3 +559,170 @@ void main(){
 }
 ```
 
+## 三、处理机调度与死锁
+
+1、高级调度
+
+- 高级调度又称作业调度或长程调度，主要功能是依据某种算法，把外存上的处于后备队列的作业调入内存。
+
+作业：在批处理系统中，是以作业为基本单位从外存调入内存的。
+
+- 作业控制块 JCB：
+
+是作业在系统中存在的标志，其中保存了系统对作业进行管理和调度所需的全部信息。每当作业进入系统，系统为每个作业创建一个 JCB。当作业完成，则系统回收分配给它的资源，撤销 JCB
+
+- 作业调度：
+
+根据 JCB 中的信息，审查系统能否满足用户作业的资源需求，按照一定算法，从外存后备队列中选择某些队列调入内存，并为它们创建进程，分配资源。然后再将新进程插入就绪队列。
+
+- 每次作业调度需要考虑两个问题：
+
+1. 决定接纳多少个作业
+2. 决定接纳哪些作业，取决于调度算法。
+
+
+
+2、低级调度（进程调度）：
+
+进程调度用于决定就绪队列中的哪个进程应获得处理机。
+
+- 进程调度的功能
+
+保存处理机现场信息、按某种调度算法选取进程、把处理器分配给进程
+
+- 进程调度的三个基本机制（和功能对应）
+
+1． 排队器。进程按一定顺序排列成队列，挑选进程。
+
+2． 分派器。分配CPU。
+
+3． 上下文切换机制：保存当前进程状态、恢复选中要运行的新进程的状态。
+
+- 进程调度方式
+
+1. 非抢占式
+
+   ​		一旦把处理机分配给某个进程后，会一直让它运行下去，直至此进程完成，或发生某些事件被阻塞时，才把处理机分配给其它进程。但难以满足紧急任务的需求。
+
+2. 抢占式
+
+   ​		允许调度程序根据某种原则暂停某个正在执行的进程，将已分配的处理机重新分配给另一个进程。可以防止一个长进程长时间占用处理机，能为大多数进程提供更公平的服务，但开销比非抢占式大。
+
+   - 抢占式基于的原则：
+
+     1． 优先权原则：通常一些重要和紧急的作业赋予较高的优先权。
+
+     2． 短作业（进程）优先原则：当新到达的作业（进程）比正在执行的作业（进程）明显短时，将暂停当前长作业（进程）的执行，使短作业优先执行。
+
+     3． 时间片原则：各个进程按时间片轮流运行。适用于分时系统。
+
+     
+
+3、 中级调度（中程调度，不再使用）：
+
+中级调度是为了提高内存利用率和系统吞吐量，为此，应使那些暂时不能运行的进程让出内存资源，将它们调至外存上去等待。
+
+这三种调度方式中，进程调度频率最高（短程调度），作业调度所需时间最长（长程调度），中级调度基于这两者之间。
+
+
+
+4、 选择调度方式和调度算法的若干准则：
+
+1. 面向用户（应用）的准则：
+
+   - 周转时间短。评价批处理系统的性能、选择作业调度方式与算法
+   - 响应时间快。常把响应时间长短用来评价分时系统的性能。
+   - 截止时间的保证。评价实时系统性能、选择实时调度算法
+   - 优先权准则。在批处理、分时和实时系统中都可以遵循优先权准则。
+
+   周转时间：作业被提交给系统开始，到作业完成的这段时间间隔。包括四部分，作业在外存后备队列上等待调度时间，进程进入就绪队列上等待调度时间，进程执行时间，以及进程等待 I/O 操作完成的时间。
+
+   **平均周转时间：**<img src="http://ruoruochen-img-bed.oss-cn-beijing.aliyuncs.com/img/image-20210513092013841.png" alt="image-20210513092013841" style="zoom:50%;" />
+
+   **带权周转时间：**作业的周转时间T与系统为它提供服务的时间Ts之比，即W = T/Ts。
+
+   **平均带权周转时间：**<img src="http://ruoruochen-img-bed.oss-cn-beijing.aliyuncs.com/img/image-20210513092328982.png" alt="image-20210513092328982" style="zoom:50%;" />
+
+   响应时间：指从用户提交一个请求开始， 直至系统首次产生响应为止的时间间隔。它包括三部分时间：输入的请求信息传送到处理机的时间，处理机对请求信息进行处理的时间，以及将所形成的响应信息回送到终端显示器的时间。
+
+   截止时间：某任务必须开始执行的最迟时间，或必须完成的最迟时间。
+
+2. 面向系统的准则
+
+   - 系统吞吐量高。评价批处理系统性能重要指标。
+
+     标准：单位时间完成的任务多
+
+   - 处理机利用率好。充分发挥硬件的效率。
+
+   - 各类资源的平衡利用
+
+
+
+5、调度算法
+
+1. 先来先服务（FCFS）调度算法
+
+   按先来后到的顺序，依次运行。FCFS算法有利于长作业（进程），而不利于短作业（进程）。有利于 cpu 繁忙型的作业，而不利于 I/O 繁忙型的作业，未能完全考虑作业的紧迫程度。
+
+2. 短作业（进程）优先调度算法 SJ(P)F
+
+   对短作业或短进程优先调度算法。该算法对长作业不利，未能完全考虑作业的紧迫程度。
+
+   - SJF短作业优先：从后备队列中选择一个或若干个估计运行时间最短的作业，将其调入内存。
+
+   - SPF短进程优先：从就绪队列中选择一个估计时间最短的进程，将处理机分配给它。
+
+3. 非抢占式优先权调度算法（OS系统很少用）
+
+   系统一旦把处理机分配给就绪队列中优先权最高的进程后，该进程便一直执行下去，直至完成。
+
+4. 抢占式优先权调度算法
+
+   系统同样是把处理机分配给优先权最高的进程，使之执行。但在其执行期间，只要又出现了另 一个其优先权更高的进程，就会有CPU重新分配。
+
+5. 高响应比优先调度算法
+
+   此算法是短作业优先算法的优化，使用动态优先权，并使作业的优先级随着等待时间的增加而以速率a提高，则长作业在等待一定的时间后，必然有机会分配到处理机。
+
+   优先权的变化规律：<img src="http://ruoruochen-img-bed.oss-cn-beijing.aliyuncs.com/img/image-20210513105056644.png" alt="image-20210513105056644" style="zoom:50%;" />
+
+   由于等待时间与服务时间之和就是系统对该作业的响应 时间，故该优先权又相当于响应比RP。
+
+   <img src="http://ruoruochen-img-bed.oss-cn-beijing.aliyuncs.com/img/image-20210513105246666.png" alt="image-20210513105246666" style="zoom:50%;" />
+
+   该算法既照顾了短作业，又考虑了作业到达的 先后次序，不会使长作业长期得不到服务。但是需要计算响应比，增加了系统开销。
+
+6. 基于时间片的轮转调度算法
+
+   把CPU分配给队首进程，并令其执行一个时间片。当执行的时间片用完时，停止该进程的执行，并将它送往就绪队列的末尾；然后，再把处理机分配给就绪队列中新的队首进程，同时也让它执行一个时间片。适合分时系统。
+
+7. 多级反馈队列调度算法
+
+   设置多个就绪队列，并为各个队列赋予不同的优先级。第一个队列的优先级最高，第二个队列次之，其余各队列的优先权逐个降低。该算法赋予各个队列中进程执行时间片的大小也各不相同，在优先权愈高的队列中，为每个进程所规定的执行时间片就愈小。
+
+- 优先权类型
+
+  优先权优先调度算法，其关键在于：使用静态优先权，还是用动态优先权；如何确定进程的优先权。
+
+  1. 静态优先权：是在创建进程时确定的，且在进程的整个运行期间保存不变。一般利用某个范围的一个整数表示。
+
+     - 确定进程优先权的依据有
+       - 进程类型，通常系统进程（接受进程、对换进程）优先权高于用户进程
+       - 进程对资源的需求，估计进程执行时间和内存需求量，一般要求少的优先权高。
+       - 用户要求。用户进程紧迫程度决定。
+
+     简单易行，系统开销小，但不够精确，很 可能出现优先权低的作业(进程)长期没有被调度的情况。
+
+  2. 动态优先权：在创建进程时所赋予的优先权，是可以随进程的推进或其等待时间的增加而改变的。
+
+6、进程和线程
+
+- 进程
+
+  进程通常被定义为一个**正在运行的程序的实例**，它由两个部分组成：
+
+  - PCB
+  - 地址空间，包含所有可执行模块或DLL 模块的代码和数据。
+
+  进程是不可调度的。若要使进程完成某项操作， 它必须拥有一个在它的环境中运行的线程，该线程负责执行包含在进程的地址空间中的代码。
