操作系统笔记 添加存储器管理

--- a/操作系统/操作系统笔记.md
+++ b/操作系统/操作系统笔记.md
@@ -726,3 +726,442 @@ void main(){
   - 地址空间，包含所有可执行模块或DLL 模块的代码和数据。
 
   进程是不可调度的。若要使进程完成某项操作， 它必须拥有一个在它的环境中运行的线程，该线程负责执行包含在进程的地址空间中的代码。
+
+7、产生死锁的原因和必要条件
+
+死锁，是指多个进程在运行过程中因争夺资源而造成的一种僵局，使得进程无法向前推进。
+
+- 产生死锁的原因：竞争资源、进程间推进顺序不当
+
+  1． 竞争资源
+
+  系统中的资源分为可剥夺性资源和非可剥夺性资源。前者指进程在获得这类资源后，该资源可以再被其他进程或系统剥夺。后者指当系统分配了这类资源后，不能够再行剥夺。
+
+  竞争非剥夺资源：
+
+  例如，系统中只有一个打印机和一个磁带机，供两个进程共享。若 A 进程已占用了打印机，B 进程已占用了磁带机。若此时，B 继续要求打印机，则由于产生 I/O 请求，B 将阻塞；若 A 有要求磁带机，则 A 也阻塞。因而两者都等待对方的资源，但它们又因为阻塞而不能继续推进，从而导致不能释放自己的资源。产生死锁。
+
+  竞争临时性资源：
+
+  指由一个进程产生，被另一个进程使用一短暂时间后便无用的资源，也称消耗性资源。
+
+  **S1、S2和S3是临时性资源，进程之间的依赖关系。**如果每个进程的工作是先生产，再请求，就没问题；反之，如果生产依赖请求的资源，则会有问题。
+
+  ![image-20210517225945262](http://ruoruochen-img-bed.oss-cn-beijing.aliyuncs.com/img/image-20210517225945262.png)
+
+  例如下述进程请求方式可能产生死锁
+
+  P1 : REQUEST(S3); RELEASE(S1);
+
+  P2 : REQUEST(S1); RELEASE(S2);
+
+  P3 : REQUEST(S2); RELEASE(S3);
+
+  2． 进程推进顺序不当：
+
+  进程推进顺序不当会导致死锁。
+
+- 产生死锁的必要条件：
+
+  互斥条件：一段时间内某个资源只由一个进程占用。
+
+  请求和保持条件：指进程已经保持了至少一个资源，但又提出新的资源请求，而该资源又被其他进程所占用。
+
+  不剥夺条件：指进程已获得的资源，在未使用完成前，不能被剥夺。
+
+  环路等待条件：指发生死锁时，必然存在一个进程-资源的环形链。
+
+8、处理死锁的基本方法
+
+预防死锁：破坏产生死锁的四个必要条件中的一个或几个条件。
+
+避免死锁：在资源动态分配过程中，用某种方式阻止系统进入不安全状态。
+
+检测死锁：不事先预防，也不检测系统是否进入不安全区，而是通过检测机制，及时检测出死锁的发生，然后采取适当措施消除死锁。
+
+解除死锁：与检测死锁配套使用。常用方式是撤销或挂起一些进程，以便回收一些资源。
+
+- 预防死锁
+
+  1. 摒弃“请求和保持”条件
+
+     在采用这种方法时，系统规定所有进程在开始运行之前， 都必须一次性地申请其在整个运行过程所需的全部资源。
+
+  2. 摒弃“不剥夺”条件
+
+     当一个已经保持了某些资源的进程，再提出新的 资源请求而不能立即得到满足时，必须释放它已经保持了的 所有资源，待以后需要时再重新申请。
+
+  3. 摒弃“环路等待”条件
+
+     系统将所有资源按类型进行线性排队， 并赋予不同的序号。所有进程对资源的请求必须严 格按照资源序号递增的次序提出，这样，在所形成的资源分 配图中，不可能再出现环路。
+
+- 系统的安全状态
+
+  在避免死锁的方法中，允许进程动态地申请资源，但系统在进行资源分配之前，应先计算此次资源分配的安全性。 若此次分配不会导致系统进入不安全状态，则将资源分配给 进程；否则，令进程等待。
+
+  安全状态：指系统能按某种进程顺序(P1，P2，…， Pn)(称〈P1，P2，…，Pn〉序列为安全序列)，来为每个进程分配其所需的资源，直至满足每个进程对资源的最大需求。如果系统无法找到这样一个安全序列，则称系统进入不安全状态。
+
+  不安全状态不一定会死锁，但当系统进入不安全 状态后，便有可能进而进入死锁状态；反之，只要系统处于 安全状态，系统便可避免进入死锁状态。因此，**避免死锁的实质在于：系统在进行资源分配时，如何使系统不进入不安全状态**
+
+  **例子：**
+
+9、利用银行家算法避免死锁
+
+1. 银行家算法的数据结构
+
+   （1）资源向量Available。这是一个含有m个元素的数组，代表每一类可用资源的数目，随该类资源的分配和回收而动态地改变。如果Available[j]=K，则表示系统中现有j类资源K个。
+
+   （2）最大需求矩阵Max。这是一个n×m的矩阵，它定义了系统中n个进程对m类资源的最大需求。如果Max[i,j]=K，则表示进程i需要j类资源的最大数目为K。
+
+   （3）分配矩阵Allocation。这也是一个n×m的矩阵，它定义了系统中每一类资源当前已分配给每一进程的资源数。 Allocation[i,j]=K，表示进程i当前已有j类资源的数目为K。
+
+   （4）需求矩阵Need。这也是一个n×m的矩阵，用以表示每一个进程尚需的各类资源数。如果Need[i,j]=K，表示进程 i 还需要 j类资源K个，才能完成其任务。
+
+   满足以下公式
+
+   **`Need[i,j]= Max[i,j] - Allocation[i,j]`**
+
+2. 银行家算法
+
+   设Request i是进程Pi的请求向量，如果Request i[j]=K，表 示进程Pi需要K个j类资源。当Pi发出资源请求后，系统按下述步骤进行检查：
+
+   (1) 如果Request i[j]≤Need[i,j]，便转向步骤(2)；否则认为出错，因为它所需要的资源数已超过它所宣布的最大值。
+
+   (2) 如果Requesti[j]≤Available[j]，便转向步骤(3)；否则，表示尚无足够资源，Pi须等待。
+
+   (3) 系统试探着把资源分配给进程P i，并修改下面数据结 构中的数值： `Available[j]:= Available[j]-Requesti[j];`
+
+   `Allocation[i,j]:= Allocation[i,j]+Requesti[j];` 
+
+   `Need[i,j]:= Need[i,j]-Requesti[j];`
+
+   (4)系统执行安全性算法，检查此次资源分配后系统是否处于安全状态。若安全，才正式将资源分配给进程Pi，以完成本次分配；否则，将本次的试探分配作废，恢复原来的资源分配状态，让进程Pi等待。
+
+10、安全性算法
+
+​	系统所执行的安全性算法可描述如下：
+
+​	 (1) 设置两个向量：
+
+​	 ① 工作向量Work，它表示系统可提供给进程继续运行所需的各类资源数目，它含有m个元素，在执行安全算法开始时，Work:=Available。
+
+​	 ② Finish，它表示系统是否有足够的资源分配给进程， 使之运行完成。开始时先做Finish[i]:=false；当有足够资源分配给进程时，再令Finish[i]:=true。
+
+​	(2) 从进程集合中找到一个能满足下述条件的进程：
+
+​	 ① Finish[i]=false； 
+
+​	 ② Need[i,j]≤Work[j]； 若找到，执行步骤(3)，否则，执行步骤(4)。
+
+​	(3) 当进程Pi获得资源后，可顺利执行，直至完成，并释放出分配给它的资源，故应执行：
+
+​	`Work[j]:= Work[j]+Allocation[i,j]；`
+
+​    ` Finish[i]:=true；`
+
+ 	go to step （2）；
+
+​	(4) 如果所有进程的Finish[i]=true都满足，则表示系统处于安全状态；否则，系统处于不安全状态。
+
+**银行家算法例子：**
+
+假定系统中有五个进程{P0，P1，P2，P3，P4}和三类资源{A，B，C}，各种资源的数量分别为10、5、7，在T0时刻的资源分配情况如图所示
+
+<img src="http://ruoruochen-img-bed.oss-cn-beijing.aliyuncs.com/img/image-20210518091133205.png" alt="image-20210518091133205" style="zoom:80%;" />
+
+(1) T0时刻的安全性：利用安全性算法对T0时刻的资源分配情况进行分析可知，在T0时刻存在着一个安全序列{P1，P3，P4，P2，P0}，故系统是安全的。
+
+<img src="http://ruoruochen-img-bed.oss-cn-beijing.aliyuncs.com/img/image-20210518093635692.png" alt="image-20210518093635692" style="zoom: 80%;" />
+
+(2) P1请求资源：P1发出请求向量Request1(1，0，2)，系统按银行家算法进行检查：
+
+`Request1(1，0，2)≤Need1(1，2，2)`
+
+`Request1(1，0，2)≤Available1(3，3，2)`
+
+③ 系统先假定可为P1分配资源，并修改Available， Allocation1和Need1向量，由此形成的资源变化情况如图中的圆括号所示
+
+④ 再利用安全性算法检查此时系统是否安全。
+
+![image-20210518094036747](http://ruoruochen-img-bed.oss-cn-beijing.aliyuncs.com/img/image-20210518094036747.png)
+
+11、死锁的检测与解除
+
+不想看，应该不是重点。
+
+## 四、存储器管理
+
+1、主存储器与寄存器
+
+- 主存储器
+
+  主存储器(简称内存或主存) ，用于保存进程运行时的程序和数据。**CPU的控制部件只能从主存储器中取得指令和数据，数据能够从主存储器读取并将它们装入到寄存器中，或者从寄存器存入到主存储器。**
+
+- 寄存器
+
+  寄存器访问速度最快，完全能与CPU协调工作。
+
+2、程序的装入和链接
+
+在多道程序环境下，要使程序运行，必须先为之创建进程。而创建进程的第一件事，便是将程序和数据装入内存。将一个用户源程序变为一个可在内存中执行的程序，需要经过一下步骤：
+
+1、首先要编译，由编译程序将源程序编译成目标模块
+
+2、其次是链接，由链接程序将编译后的目标模块，以及所需库函数链接起
+
+来，形成一个完整的装入模块。
+
+3、最后装入，由装入程序将装入模块装入内存。
+
+<img src="http://ruoruochen-img-bed.oss-cn-beijing.aliyuncs.com/img/image-20210518102522860.png" alt="image-20210518102522860" style="zoom:80%;" />
+
+- 程序装入
+
+1. 绝对装入方式：在编译时，如果知道程序将驻留在内存的什么位置，则，编译程序将产生绝对地址的目标代码。（适用于单道）
+2. 可重定位装入方式：在多道程序环境下，所得到的目标模块的起始地址通常从 0 开始，程序中的其他地址也都是相对于起始地址计算的。此时可以采用可重定位方式装入，根据内存当前情况，装入到适当位置。采用可重定位装入程序将装入模块装入内存后，会使得装入模块的所有逻辑地址与实际装入内存的物理地址不同。
+3. 动态运行时装入方式：可重定位装入方式不允许程序运行时在内存中移动位置，而动态方式可以。动态运行时的装入程序在把装入模块装入内存后，并不立即把装入模块中的相对地址装换为绝对地址，而是把这种地址转换推迟到程序真正要执行才开始。这就需要重定位寄存器的支持。
+
+- 程序链接：
+
+1. 静态链接：在程序运行前，先将各自目标模块及其所需库函数，链接成一个装入模块，以后不再拆开。属于事先链接。
+2. 装入时动态链接：将目标模块，在装入内存时，采用边装入边链接的链接方式。
+3. 运行时动态链接：对某些目标模块的链接，是在程序执行中需要该模块时，才对它进行链接。
+
+- 静态链接
+
+例如：有 A,B,C 三个目标模块，长度分别为 L,M,N。其中 A 中有 CALL B 语句，B 中有 CALL C语句。欲将 A,B,C 装配成一个装入模块。需要修改两个东西：
+
+1） 对相对地址进行修改。
+
+2） 变换外部调用符号，将调用符号换成相对地址。
+
+<img src="http://ruoruochen-img-bed.oss-cn-beijing.aliyuncs.com/img/image-20210518104111000.png" alt="image-20210518104111000" style="zoom:80%;" />
+
+- 装入时动态链接：在装入一个目标模块时，若发生一个外部模块调用事件，将引起装入程序去找出相应的外部目标模块，并装入内存。
+
+  优点：便于修改和更新，便于实现对目标模块的共享。
+
+3、连续分配方式
+
+1. 单一连续分配：适用于单用户、单任务的操作系统。内存分为系统区和用 区两部分，系统区仅提供给OS使用，用户区提供给用户使用。
+
+2. 固定分区分配：将内存用户空间划分为若干个固定大小的区域，每个分区中只装入一道作业。允许有几道作业并发执行。
+
+3. 动态分区分配：根据进程的实际需求，动态分配空间。在实现可变分区分配时，将涉及到分区分配中所用的数据结构、分区分配算法和分区的分配与回收操作这样三个问题。
+
+   1）分区分配中的数据结构
+
+   ​	   为了实现分区分配，系统中必须配置相应的数据结构，用来描述空闲分区和已分配分区的情况，为分配提供依据。常用的数据结构有以下两种形式：
+
+   ​		①空闲分区表。在系统中设置一张空闲分区表，用于记录每个空闲分区的情况。每个空闲分区占一个表目，表目中包括分区序号、 分区始址及分区的大小等数据项。（不常用，因为不灵活）
+
+   ​		②空闲分区链。为了实现对空闲分区的分配和链接，在每个分区的起始部分，设置一 些用于控制分区分配的信息，以及用于链接各分区所用的前向指针； 在分区尾部则设置一后向指针，通过前、后向链接指针，可将所有的 空闲分区链接成一个双向链，如图所示。为了检索方便，在分区尾部 重复设置状态位和分区大小表目。当分区被分配出去以后，把状态位 由“0”改为“1” ，同时将节点从链表删除。
+
+   <img src="http://ruoruochen-img-bed.oss-cn-beijing.aliyuncs.com/img/image-20210518105535708.png" alt="image-20210518105535708" style="zoom:80%;" />
+
+- 动态分区分配算法
+
+  1） 首次适应 FF 算法：FF 算法要求空闲分区链以地址递增的次序链接。在分配内存时，从链首开始顺序查找，直至找到一个大小能满足要求的空闲分区为止，然后再按照作业的大小，从该分区中划出一块内存空间分配给请求者，剩余空闲分区仍留在空闲链中。
+
+  2） 循环首次适应 NF 算法：在为进程分配内存空间时，不再是每次都从链首开始查找，而是从上一次找到的空闲分区的下一个空闲分区开始查找，直至找到满足要求的空闲分区，从中划分出一块满足要求大小的内存空间分配给作业。
+
+  3） 最佳适应 BF 算法：每次为作业分配内存时，总是把能满足要求，又是最小的空闲分区分配给作业。要求将所有的空闲分区按其容量以从小到大的顺序形成一空闲分区 链。这样，第一次找到的能满足要求的空闲区，必然是最佳的。
+
+  4） 最坏适应 WF 算法：要扫描整个空闲分区表或链表，总是挑选一个最大的空闲分区分割给作业，优点在于可使剩下的空闲分区不至于太小，产生碎片的几率很小。
+
+  5） 快速适应 QF 算法：将空闲分区根据其容量大小进行分类，对于每一类具有相同容量的所有空闲分区，单独设立一个空闲分区链表。这样，系统中存在多个空闲分区链表，同时在内存中设立一张管理索引表，该表的每一个表项对应一种空闲分区类型，并记录该类型空闲分区链表头指针。
+
+- 分区分配操作
+
+  在动态分区存储管理方式中，主要操作是分配内存和回收内存
+
+  1）分配内存
+
+  ​	   系统应利用某种分配算法，从空闲分区链(表)中找到所需大小的 分区。设请求的分区大小为u.size，表中每个空闲分区的大小可表示 为m.size。若m.size-u.size≤size(size是事先规定的不再切割的剩 余分区的大小)，说明多余部分太小，可不再切割，将整个分区分配给 请求者；否则(即多余部分超过size)，从该分区中按请求的大小划分 出一块内存空间分配出去，余下的部分仍留在空闲分区链(表)中。然后，将分配区的首址返回给调用者。
+
+  ![image-20210518113613995](http://ruoruochen-img-bed.oss-cn-beijing.aliyuncs.com/img/image-20210518113613995.png)
+
+  2）回收内存
+
+  当进程运行完毕释放内存时，系统根据回收区的首址，从空闲区 链(表)中找到相应的插入点，此时可能出现以下四种情况之一：
+
+  (1) 回收区与插入点的前一个空闲分区F1相邻接。 
+
+  (2) 回收分区与插入点的后一空闲分区F2相邻接。
+
+  (3) 回收区同时与插入点的前、后两个分区邻接。 
+
+  (4) 回收区与现有空闲区无邻接。是孤立分区，创建新节点，加 入空闲链表。
+
+- 可重定位分区分配：
+
+  在内存分配时，若在系统中有若干小的分区，总容量足够大，但单独一个却不能容下程序，这些分区也不相邻，无法把程序装入内存。引起了内存浪费，产生碎片。
+
+  通过移动内存中的作业的位置，把原来多个分散的小分区拼凑成一个大分区的方法，称为紧凑法，提供内存利用率。但由于紧凑后的用户程序在内存中的位置发生改变，因此，需要重定位。
+
+4、基本分页存储管理方式
+
+- 页面：
+
+分页存储管理是将一个进程的逻辑地址空间分成若干大小相等的片，称之为页。并给各个页加以编号，从 0 开始，如第0页、第1页等。
+
+相应地，内存也分成与页面等大的若干个存储块，称为物理块或页框，同样为它们加以编号，如第0#块、1#块等。在为进程分配内存时，以块为单位将进程的若干页分别装入到多个可以不相邻的物理块中。由于进程的最后一页通常装不满而形成不可利用的碎片，称之为“页内碎片”。页面大小一般为 2 的幂。
+
+- 页面地址结构：
+
+分页地址由页号，偏移量（页内地址）组成。如下例：<img src="http://ruoruochen-img-bed.oss-cn-beijing.aliyuncs.com/img/image-20210518130129913.png" alt="image-20210518130129913" style="zoom: 33%;" />
+
+图中的地址长度为32位，其中0～11位为页内地址，即每页的大小为4 KB；12～31位为页号，地址空间最多允许有1M页（2^20页）。
+
+若给定一个逻辑地址空间中的地址为A，页面的大小为L，则页号P和页内地址d可 按下式求得：<img src="http://ruoruochen-img-bed.oss-cn-beijing.aliyuncs.com/img/image-20210518130405962.png" alt="image-20210518130405962" style="zoom:50%;" /><img src="http://ruoruochen-img-bed.oss-cn-beijing.aliyuncs.com/img/image-20210518130426216.png" alt="image-20210518130426216" style="zoom:50%;" />
+
+其中，INT代表取整，MOD是取余函数。
+
+例如，如果系统的页面大小为 1KB，设A = 2170 B，则由上式可以求得：
+
+ P = 2，d = 122
+
+- 页表
+
+在分页系统中，允许将进程的各个页离散地存储在内存不同的 物理块中，但系统应能保证进程的正确运行，即能在内存中找到每 个页面所对应的物理块。系统要为每一个进程都建立一个页表。在进程地址空间内的所有页（0~n），依次在页表中有一页表项，记录了相应页在内存中的对应的物理块号。在配置了页表后，进程执行时，通过查找该表， 即可找到每页在内存中的物理块号。页表是实现从页号到物理块号的地址映射。
+
+- 地址变换机构
+
+​        该机构是实现从逻辑地址到物理地址的转换，页内地址和物理地址是一一对应的，地址变换机构的任务是将逻辑地址中的页号，转换为内存中的物理块号。借助页表实现。
+
+1. 基本的地址变换机构：
+
+   ​		页表大多驻留在内存中，进程未执行时，页表的始址和页表长度存放在本进程的PCB中。当调度程序调度到某进程时，才将这两个数据装入页表寄存器中。
+
+   ​		当进程要访问某个逻辑地址中的数据时，以下步骤：
+
+   ① 地址拆分（页号+页内地址） 
+
+   ② 查找页表（出错检查：地址越界） 
+
+   ③ 获得块号 
+
+   ④ 重新拼合成物理地址
+
+2. 具有快表的地址变换机构
+
+   ​        为了提高地址变换速度，在地址变换机构中增设一个具有并行查询能力的特殊高速缓冲寄存器，称为“快表”，用以存放当前访问的那些页表项。此时的地址变换过程是：在 CPU 给出有效地址后，由地址变换机构自动将页号送入快表，并将此页号与快表中的所有页号做比较，若有匹配的，则表示要访问的页表项子在快表中。这样可以直接从快表中读取对应的物理块号。若不在，则还须再访问内存中的页表，找到后，将物理块号送至地址寄存器，同时将此表项加入快表的一个寄存器中，如果满了，则替换。
+
+- 两级页表？？？
+
+  以 32 位逻辑空间为例，当页面大小为 4KB（12 位），若采用一级页表结构，对应（32-12）20 位的页号，即页表项应有1兆个。若采用二级页表，则需要对页表分页，外层页表中的页内地址为 10 位，外层页号也为 10 位。
+
+  ![image-20210518133425797](http://ruoruochen-img-bed.oss-cn-beijing.aliyuncs.com/img/image-20210518133425797.png)
+
+  在页表中的每个表项中存放的是进程的某页在内存中的**物理块号**。而在外层页表的每个页表项中，所存放的是某页表分页的**首地址**。我们可以利用外层页表和页表这两级页表，来实现从进程的逻辑地址到内存中物理地址间的变换。
+
+  ![image-20210518133827806](http://ruoruochen-img-bed.oss-cn-beijing.aliyuncs.com/img/image-20210518133827806.png)
+
+- 三级页表？？？
+
+5、虚拟存储器
+
+虚拟存储器：具有请求调入功能和置换功能，能从逻辑上对内存容量加以扩充的一种存储器系统。
+
+>​		基于局部性原理，应用程序在运行之前，没有必要全部装入内存， 仅须将那些当前要运行的少数页面或段先装入内存便可运行，其余部分暂留在盘上。 但如果程序在运行时，所要访问的页(段)尚未调入内存(称为缺页或缺 段)，此时程序应利用OS所提供的请求调页(段)功能，将它们调入内存， 以使进程能继续执行下去。如果此时内存已满，无法再装入新的页(段)， 则还须再利用页(段)的置换功能，将内存中暂时不用的页(段)调至盘上，腾出足够的内存空间后，再将要访问的页(段)调入内存，使程序继续执行下去。
+
+- 虚拟存储器的实现方法
+
+  1） 分页请求系统
+
+  ​		在分页系统基础上，增加了请求调页功能和页面置换功能所形成的页式虚拟存储系统。
+
+  2） 请求分段系统
+
+  ​	在分段系统基础上，增加了请求调段及分段置换功能后所形成的段式虚拟存储系统。
+
+- 虚拟存储器特征
+
+  1. 多次性：一个作业被分成多次调入内存运行。
+  2. 对换性:允许在作业的运行过程中进行换进、换出。
+  3. 虚拟性:从逻辑上扩充内存容量。
+
+6、请求分页存储管理方式:
+
+- 请求分页中的硬件支持: 页表机制。
+
+  ​		在请求分页系统中所需要的主要数据结构是页表。其基本作用仍然是 将用户地址空间中的逻辑地址变换为内存空间中的物理地址。由于只将应 用程序的一部分调入内存，还有一部分仍在盘上，故须在页表中再增加若 干项，供程序(数据)在换进、换出时参考。在请求分页系统中的每个页表 项如下所示：
+
+  ![image-20210518150344308](http://ruoruochen-img-bed.oss-cn-beijing.aliyuncs.com/img/image-20210518150344308.png)
+
+  - 状态位P：用于指示该页是否已调入内存，供程序访问时参考。
+  - 访问字段A：用于记录本页在一段时间内被访问的次数。
+  - 修改位M：表示该页在调入内存后是否被修改过。
+  - 外存地址：用于指出该页在外存上的地址，通常是物理块号， 供调入该页时参考。
+
+- 缺页中断机构:
+
+  当所要访问的页面不在内存中时，便产生缺页中断，请求OS将所缺页调入内存。
+
+  它与通常的中断有明显区别:
+
+  1) 在指令执行期间产生和处理中断信号。一般，CPU 都是在一条指令执行完毕后，才检验是否有中断请求到达。
+
+  2) 一条指令在执行期间，可能产生多次缺页中断。
+
+  **例子：**在执行一条指令COPY A TO B时，可能要产生 6次缺页中断，其中指令本身跨了两个页面，A和B又分别各是一个数据块，也都跨了两个页面。
+
+  <img src="http://ruoruochen-img-bed.oss-cn-beijing.aliyuncs.com/img/image-20210518150750289.png" alt="image-20210518150750289" style="zoom:80%;" />
+
+7、内存分配策略和分配算法：
+
+为进程分配内存时，需要考虑三个问题：
+
+1） 最小物理块数的确定：是能保证进程正常运行所需要的最小物理块数。
+
+2） 物理块的分配策略：
+
+1. 固定分配局部置换：为每一个进程分配一定数目的物理块，在整个运行期间都不改变。如果进程再发生缺页，只能从给它分配的那些进程中置换出页来使用。
+2. 可变分配全局置换：先为系统中的每个进程分配一定数目的物理块，而 OS 也保留一个空闲物理块队列。当缺页时，由系统从空闲物理块队列取出一个物理块分配给该进程，只有当系统中的空闲块都用完，OS才会采用调度策略换出一部分页。
+3. 可变分配局部置换:为每个进程分配一定数目的物理块，但发生缺页时，只允许从该进程在内存中的页面选出一个页换出。
+
+- 物理块分配算法
+
+  1） 平均分配算法：
+
+  ​		将系统中的所有可供分配的物理块平均分配给各个进程。当系统中有100个物理块，有5个进程在运行时，每个进程可分得20个物理块。
+
+  2） 按比例分配算法：
+
+  ​		根据进程的大小按比例分配物理块。如果系统中共有n个进程，每个进程的页面数为Si，则系统中各进程页面数的总和为：<img src="http://ruoruochen-img-bed.oss-cn-beijing.aliyuncs.com/img/image-20210518151656505.png" alt="image-20210518151656505" style="zoom:50%;" />
+
+  ​		又假定系统中可用的物理块总数为m，则每个进程所能分到的物理块 数为bi，将有：<img src="http://ruoruochen-img-bed.oss-cn-beijing.aliyuncs.com/img/image-20210518151725236.png" alt="image-20210518151725236" style="zoom:50%;" />
+
+  b应该取整，它必须大于最小物理块数。
+
+  3） 考虑优先权的分配算法：
+
+  ​		将内存中的可供分配的所有物理块分为两部分，一部分按比例分配给各个进程，另一部分则根据各进程的优先权，适时增加其相应份额后，分配给进程。
+
+8、页面置换算法
+
+1） 最佳置换算法：
+
+​		所选择被淘汰的页面，是以后永远不使用的，或许是在最长(未来)时间内不再 被访问的页面。
+
+​		**例子：**假定系统为某进程分配了三个物理块，并考虑有以下的页面号引用 串：`7，0，1，2，0，3，0，4，2，3，0，3，2，1，2，0，1，7，0，1`
+
+​		进程运行时，先将7，0，1三个页面装入内存。以后，当进程要访问页面2时，将会产生缺页中断。此时OS根据最佳置换算法，将选择页面7予以淘汰。这是因为页面0将作为第5个被访问的页面，页面1是第14个被访问的页面，而页面7则要在第18次页面访问时才需调入。
+
+​		下次访问页面 0时，因它已在内存而不必产生缺页中断。当进程访问页面3时，又将引起页面1被淘汰；因为，它在现有的1，2，0三个页面中，将是以后最晚才被访问的。采用最佳置换算法发生了**6次页面置换。**
+
+![image-20210518153339121](http://ruoruochen-img-bed.oss-cn-beijing.aliyuncs.com/img/image-20210518153339121.png)
+
+2） 先进先出FIFO页面置换算法：
+
+​		总是淘汰最先进入内存的页面，即选择在内存中驻留时间最长的页面予以淘汰。
+
+​		**例子：**假定系统为某进程分配了三个物理块，并考虑有以下的页面号引用 串：`7，0，1，2，0，3，0，4，2，3，0，3，2，1，2，0，1，7，0，1`
+
+​		当进程第一次访问页面2时，将把第7页换出，因为它是最先被调入内存的；在第一次访问页面3时，又将把第0页换出，因为它在 现有的2，0，1 三个页面中是最老的页。由图可以看出，利用FIFO算法时进行了12次页面置换，比最佳置换算法正好多一倍。![image-20210518153531982](http://ruoruochen-img-bed.oss-cn-beijing.aliyuncs.com/img/image-20210518153531982.png)
+
+​	3） 最近最久未使用 LRU 置换算法：
+
+​			LRU置换算法是选择最近、最久未使用的页面予以淘汰。该算法赋予每个页面一个访问字段，用来记录一个页面自上次被访问以来所经历的时间t，当须淘汰一个页面时， 选择现有页面中其t值最大的，即最近最久未使用的页面予以淘汰。
+
+​		**例子：**假定系统为某进程分配了三个物理块，并考虑有以下的页面号引用 串：`7，0，1，2，0，3，0，4，2，3，0，3，2，1，2，0，1，7，0，1`![image-20210518154030469](http://ruoruochen-img-bed.oss-cn-beijing.aliyuncs.com/img/image-20210518154030469.png)
