添加红宝书笔记

--- a/红宝书读书笔记/红宝书笔记.md
+++ b/红宝书读书笔记/红宝书笔记.md
@@ -1592,6 +1592,8 @@ wm.set(loginButton, {disabled: true});
 
 #### 6.5.1 基本API
 
+Set中不包含重复的元素
+
 ```js
 // 使用数组初始化集合 
 const s1 = new Set(["val1", "val2", "val3"]);
@@ -1638,4 +1640,279 @@ const loginButton = document.querySelector('#login');
 // 通过加入对应集合，给这个节点打上“禁用”标签
 disabledElements.add(loginButton);
 ```
+
+## 第七章 迭代器与生成器
+
+### 7.1 Iterable接口/可迭代协议
+
+实现 Iterable 接口（可迭代协议）要求同时具备两种能力：支持迭代的自我识别能力和创建实现Iterator 接口的对象的能力。要求暴露一个属性作为“默认迭代器”，这个默认迭代器属性以`Symbol.iterator`作为键，引用一个迭代器工厂函数，调用这个工厂函数返回一个新迭代器。
+
+```js
+let arr = ['a', 'b', 'c'];
+//工厂函数
+console.log(arr[Symbol.iterator]); // f values() { [native code] 
+//迭代器
+console.log(arr[Symbol.iterator]()); // ArrayIterator {}
+```
+
+#### 7.1.1 迭代器协议
+
+迭代器是一种一次性使用的对象，迭代器 API 使用 next()方法在可迭代对象中遍历数据。
+
+next()方法返回的迭代器对象 IteratorResult 包含两个属性：done 和 value。`done`是否遍历结束，`value`取到的值。
+
+### 7.2 生成器/Generator函数
+
+能在函数块中暂停和恢复执行代码
+
+#### 7.2.1 生成器基础
+
+特点：在函数名称前加一个`*`，表示生成器函数
+
+```js
+// 生成器函数声明
+function* generatorFn() {}
+
+// 作为类实例方法的生成器函数
+class Foo { 
+ * generatorFn() {} 
+}
+```
+
+**箭头函数不能用来定义生成器函数**
+
+调用生成器函数产生一个**生成器对象**，需要调用`next()`方法才会恢复执行。
+
+**应用：**
+
+1、生成器对象作为可迭代对象
+
+```js
+function* generatorFn() { 
+ yield 1; 
+ yield 2; 
+ yield 3; 
+} 
+for (const x of generatorFn()) { 
+ console.log(x); 
+} 
+// 1 
+// 2 
+// 3
+```
+
+2、使用yield实现输入和输出
+
+yield 关键字会接收到传给 next()方法的第一个值，第一次调用 next()传入的值不会被使用，因为这一次调用是为了开始执行生成器函数。
+
+```js
+function* generatorFn(initial) { 
+ console.log(initial); 
+ console.log(yield); 
+ console.log(yield); 
+} 
+let generatorObject = generatorFn('foo'); 
+generatorObject.next('bar'); // foo 
+generatorObject.next('baz'); // baz 
+generatorObject.next('qux'); // qux
+```
+
+3、星号增强 yield 的行为，让它能够迭代一个可迭代对象
+
+```js
+function* generatorFn() { 
+ yield* [1, 2, 3]; 
+} 
+let generatorObject = generatorFn(); 
+for (const x of generatorFn()) { 
+ console.log(x); 
+} 
+// 1 
+// 2 
+// 3
+```
+
+#### 7.2.2 生成器作为默认迭代器
+
+因为生成器对象实现了 Iterable 接口，而且生成器函数和默认迭代器被调用之后都产生迭代器，所以生成器格外适合作为默认迭代器。
+
+```js
+class Foo { 
+ constructor() { 
+ this.values = [1, 2, 3]; 
+ }
+ * [Symbol.iterator]() { 
+ 	yield* this.values; 
+ } 
+} 
+const f = new Foo(); 
+for (const x of f) { 
+ console.log(x); 
+} 
+// 1 
+// 2 
+// 3
+```
+
+## 第八章 对象、类与面向对象编程
+
+对象：一组属性的无序集合，即没有特点顺序。
+
+### 8.1 对象基础
+
+#### 8.1.1 属性的类型
+
+属性分两种：数据属性和访问器属性。
+
+1、数据属性
+
+数据属性包含一个保存数据值的位置。值会从这个位置读取，也会写入到这个位置。数据属性有 4个特性描述它们的行为。
+
+1. [[Configurable]] ：是否可delete删除，是否可以修改特性，是否可改写成访问器属性，默认为true
+2. [[Enumerable]] ：是否可以for-in，默认true
+3. [[Writable]] ：是否可被修改，默认true
+4. [[Value]]：包含属性实际的值。
+
+要修改属性的默认特性，就必须使用 Object.defineProperty()方法。接收3个参数：对象、属性名称、描述对象。描述对象可以包括configurable等等。
+
+```js
+let person = {}; 
+Object.defineProperty(person, "name", { 
+ writable: false, 
+ value: "Nicholas" 
+}); 
+console.log(person.name); // "Nicholas" 
+person.name = "Greg"; 
+console.log(person.name); // "Nicholas"
+```
+
+**注意：在调用 Object.defineProperty()时，configurable、enumerable 和 writable 的值如果不指定，则都默认为 false。**
+
+与直接设置属性不同，直接设置都默认为true。
+
+2、访问器属性
+
+访问器属性不包含数据值。它们包含一个获取（getter）函数和一个设置（setter）函数，可选。
+
+访
+
+问器属性有 4 个特性描述它们的行为：
+
+1. [[Configurable]]：是否可以 delete 删除，是否可以修改它的特性，是否可以改为数据属性。默认true。 
+2.  [[Enumerable]] ：是否可以for-in，默认true
+3. [[Get]]：获取函数，在读取属性时调用。默认值为 undefined。 
+4. [[Set]]：设置函数，在写入属性时调用。默认值为 undefined。
+
+访问器属性是不能直接定义的，必须使用 Object.defineProperty()。
+
+#### 8.1.2 定义多个属性
+
+`Object.defineProperties()`方法，这个方法可以通过多个描述符一次性定义多个属性。接收两个参数：对象、描述对象。
+
+```js
+let book = {}; 
+Object.defineProperties(book, { 
+ year_: { 
+ 	value: 2017 
+ }, 
+ edition: { 
+	 value: 1 
+ }, 
+ year: { 
+ 	get() { 
+ return this.year_; 
+ }, 
+ set(newValue) { 
+     if (newValue > 2017) { 
+         this.year_ = newValue; 
+         this.edition += newValue - 2017; 
+	 } 
+   } 
+ } 
+});
+```
+
+#### 8.1.3 读取属性的特性
+
+使用`Object.getOwnPropertyDescriptor()`方法可以取得指定属性的属性描述符，接收2个参数：对象、属性名，返回值对象，包含了configurable、get、set等属性（看具体情况是数据属性还是访问器属性）。
+
+如果不传第二个参数，则返回一整个描述对象。
+
+```js
+let book = {}; 
+Object.defineProperties(book, { 
+ year_: { 
+ 	value: 2017 
+ }, 
+ edition: { 
+	 value: 1 
+ }, 
+ year: { 
+ 	get() { 
+ return this.year_; 
+ }, 
+ set(newValue) { 
+     if (newValue > 2017) { 
+         this.year_ = newValue; 
+         this.edition += newValue - 2017; 
+	 } 
+   } 
+ } 
+});
+
+let descriptor = Object.getOwnPropertyDescriptor(book, "year_"); 
+console.log(descriptor.value); // 2017 
+console.log(descriptor.configurable); // false
+```
+
+#### 8.1.4 合并对象
+
+`Object.assign()`将源对象的属性拷贝至目标对象，接收参数：目标对象、多个源对象。**浅复制**
+
+```js
+dest = {}; 
+result = Object.assign(dest, { a: 'foo' }, { b: 'bar' }); 
+console.log(result); // { a: foo, b: bar }
+```
+
+#### 8.1.5 对象标识及相等判断
+
+`Object.is()`，Object.is()的用法与全等`===`基本一致，唯有不同的两点：
+
+1. +0与-0为false
+2. NaN与NaN为true
+
+#### 8.1.6 增强对象语法
+
+1、可计算属性
+
+```js
+//可计算属性
+let name = 'name', age = 'age', job = 'job', count = 0;
+function getUnionKey(key) {
+  return `${key}_${count++}`;
+}
+
+let person = {
+  [getUnionKey(name)]: 'Tom',
+  [getUnionKey(age)]: 18,
+  [getUnionKey(job)]: 'stu'
+}
+
+console.log(person);//{ name_0: 'Tom', age_1: 18, job_2: 'stu' }
+```
+
+2、属性值简写
+
+3、方法名简写
+
+4、对象解构，是使用与对象匹配的结构来实现对象属性赋值。
+
+### 8.2 创建对象
+
+- Object 类型有一个方法叫 `Object.getPrototypeOf()`，返回参数的内部特性
+
+`[[Prototype]]`的值。
+
+- Object 类型还有一个 `setPrototypeOf()`方法，可以向实例的私有特性`[[Prototype]]`写入一个新值。这样就可以重写一个对象的原型继承关系，但`Object.setPrototypeOf()`可能会严重影响代码性能，应避免使用 Object.setPrototypeOf()。
 
