--- a/操作系统/操作系统简答题.md
+++ b/操作系统/操作系统简答题.md
@@ -107,52 +107,6 @@ PCB 的作用：使一个在多道程序环境下不能独立运行的程序(含
 3. 有限等待，要求访问临界资源的进程，应保证在有限时间内能进入临界区，避免陷入“死等”状态。
 4. 让权等待，当进程不能进入临界区，应立即释放处理机，以免陷入“忙等”状态。
 
-#### 什么是死锁？产生死锁的原因和必要条件是什么？
-
-1、死锁是指多个进程在保持部分资源的同时等待本组其他进程占有的资源而形成的循环等待，这种僵局叫做死锁。
-
-2、产生死锁的原因：竞争资源、进程间推进顺序不当
-
-3、产生死锁的必要条件：互斥条件、请求和保持条件、不剥夺条件、环路等待条件
-
-#### 有哪些途径可以预防死锁？
-
-1、摒弃“请求和保持”条件（全部分配法）：给进程分配资源时，一次性地分配进程所需的全部资源，缺少一个资源都不分配。
-
-2、摒弃“不剥夺”条件（剥夺资源法）：当进程阻塞时，剥夺该进程已获得的全部资源。
-
-3、摒弃“环路等待”条件（有序资源分配法）：申请同类资源采用全部分配法，申请不同类资源，按资源类别的序号从小到大的顺序申请。
-
-#### 处理机调度算法有哪些？
-
-先来先服务（FCFS）调度算法、短作业（进程）优先调度算法 SJ(P)F、非抢占式优先权调度算法、抢占式优先权调度算法、基于时间片的轮转调度算法
-
-#### 简述FCFS、RR和优先级调度算法的实现思想
-
-1、FCFS算法。
-
-按先来后到的顺序，依次分配CPU。当前作业（进程）占用CPU至执行完或阻塞，才让出CPU。
-
-特点：有利于长作业，而不利于短作业；有利于CPU繁忙型的作业，而不利于 I/O 繁忙型的作业。
-
-2、RR轮转法
-
-把CPU分配给队首进程，并令其执行一个时间片。当执行的时间片用完时，停止该进程的执行，并将它送往就绪队列的末尾；然后，再把处理机分配给就绪队列中新的队首进程，同时也让它执行一个时间片。适合分时系统。
-
-#### 什么是虚拟存储器
-
-虚拟存储器：具有请求调入功能和置换功能，能从逻辑上对内存容量加以扩充的一种存储器系统。
-
-#### 解释一下属于：临界区、临界资源、原语、信号量
-
-临界区：每个进程中访问临界资源的那段代码
-
-临界资源：每次仅允许一个进程访问的资源
-
-原语：由若干条指令组成的，用于完成特定功能的一段程序，为保证操作的正确性，它为原子操作，即原语是不可分割的操作。
-
-信号量：表示状态，用来保证多个关键代码段不被并发调用。可以解决进程互斥、进程前趋关系的文件。
-
 #### P、V操作原语是怎么定义的？
 
 1、P(S):
@@ -165,9 +119,145 @@ PCB 的作用：使一个在多道程序环境下不能独立运行的程序(含
 - 将信号量S的值加1，即 S=S+1;
 - 如果 S>0，则该进程继续执行;否则释放队列中第一个等待信号量的进程。
 
-#### 请详细说明分区式存储器管理方案三种放置策略的思想、特点及其自由主存队列的排列方式。
+```js
+void wait(int s){
+    while(s<=0);//当没有资源可以利用时，等待
+    s=s-1;//当有资源时，使用。每使用一个，资源个数减一
+}
+void signal(int s){
+	s=s+1;//释放资源，资源个数加一
+}
+```
 
-## 计算题
+#### 进程之间有哪些基本的通信方式？分别有什么特点？
 
-#### 生产者消费者问题
+进程通信分为低级通信和高级通信。
+
+低级通信只传递几个字节信息，达到控制进程执行速度的作用，例如P、V操作。
+
+高级通信分为：共享存储器、消息传递、管道通信。
+
+1、共享存储器：内存中分配一片空间作为共享存储区，借以实现诸进程间的信息交换。
+
+2、消息传递：以消息为单位在进程间进行数据交换。
+
+3、管道通信：用于连接一个读进程和一个写进程以实现它们之间通信的一个共享文件。
+
+#### 处理机调度算法有哪些？各自的特点是什么？
+
+1. 先来先服务调度算法（FCFS）。按先来后到的顺序，依次分配CPU。
+
+   特点：公平、简单；有利于长作业，而不利于短作业
+
+2. 短作业优先调度算法 （SJF）。从后备队列中选择一个或若干个估计运行时间最短的作业，将其调入内存。
+
+   特点：对短作业友好，对长作业不利，未能完全考虑作业的紧迫程度。
+
+3. 抢占式优先权调度算法。系统把处理机分配给优先权最高的进程，使之执行。但在其执行期间，只要又出现了另 一个其优先权更高的进程，就会有CPU重新分配。
+
+#### 什么是死锁？产生死锁的原因和必要条件是什么？
+
+1、死锁是指多个进程在保持部分资源的同时等待本组其他进程占有的资源而形成的循环等待，这种僵局叫做死锁。
+
+2、产生死锁的原因：竞争资源、进程间推进顺序不当
+
+3、产生死锁的必要条件：互斥条件、请求和保持条件、不剥夺条件、环路等待条件
+
+#### 处理死锁的基本方法
+
+预防死锁：破坏产生死锁的四个必要条件中的一个或几个。
+
+避免死锁：在资源动态分配过程中，用某种方式阻止系统进入不安全状态。
+
+检测死锁：检测出死锁的发生，然后采取适当措施消除死锁。
+
+解除死锁：与检测死锁配套使用。常用方式是撤销或挂起一些进程，以便回收一些资源。
+
+#### 有哪些途径可以预防死锁？
+
+1、摒弃“请求和保持”条件（全部分配法）：给进程分配资源时，一次性地分配进程所需的全部资源，缺少一个资源都不分配。
+
+2、摒弃“不剥夺”条件（剥夺资源法）：当进程阻塞时，剥夺该进程已获得的全部资源。
+
+3、摒弃“环路等待”条件（有序资源分配法）：申请同类资源采用全部分配法，申请不同类资源，按资源类别的序号从小到大的顺序申请。
+
+#### 系统的安全状态
+
+安全状态：指系统能按某种进程顺序(P1，P2，…， Pn)(称〈P1，P2，…，Pn〉序列为安全序列)，来为每个进程分配其所需的资源，直至满足每个进程对资源的最大需求。如果系统无法找到这样一个安全序列，则称系统进入不安全状态。
+
+**避免死锁的实质在于：系统在进行资源分配时，如何使系统不进入不安全状态**
+
+#### 解释一下属于：临界区、临界资源、原语、信号量
+
+临界区：每个进程中访问临界资源的那段代码
+
+临界资源：每次仅允许一个进程访问的资源
+
+原语：由若干条指令组成的，用于完成特定功能的一段程序，为保证操作的正确性，它为原子操作，即原语是不可分割的操作。
+
+信号量：表示状态，用来保证多个关键代码段不被并发调用。可以解决进程互斥、进程前趋关系的文件。
+
+管程：代表共享资源的数据结构，以及由对该共享数据结构实施操作的一组过程所组成的资源管理程序，共同构成了一个操作系统的资源管理模块。
+
+#### 周转时间
+
+知识点：
+
+周转时间：作业被提交给系统开始，到作业完成的这段时间间隔。包括四部分，作业在外存后备队列上等待调度时间，进程进入就绪队列上等待调度时间，进程执行时间，以及进程等待 I/O 操作完成的时间。
+
+**平均周转时间：**<img src="http://ruoruochen-img-bed.oss-cn-beijing.aliyuncs.com/img/image-20210513092013841.png" alt="image-20210513092013841" style="zoom:50%;" />
+
+**带权周转时间：**作业的周转时间T与系统为它提供服务的时间Ts之比，即W = T/Ts。
+
+**平均带权周转时间：**<img src="http://ruoruochen-img-bed.oss-cn-beijing.aliyuncs.com/img/image-20210513092328982.png" alt="image-20210513092328982" style="zoom:50%;" />
+
+#### 将一个程序装入内存通常由哪几种方式？
+
+1. 绝对装入方式：在编译时，如果知道程序将驻留在内存的什么位置，则，编译程序将产生绝对地址的目标代码。
+2. 可重定位装入方式。装入程序根据内存当前的实际使用情况，将将入模块装入到内存适当的地方，地址变换在装入时一次完成，采用相对地址存放程序和数据。
+3. 动态运行时装入方式。装入模块装入内存后，地址转换推迟到程序要执行时才执行。
+
+#### 动态分区分配算法有哪几种？
+
+1） 首次适应 FF 算法：空闲分区链以地址递增的次序链接。在分配内存时，从链首开始顺序查找，直至找到一个大小能满足要求的空闲分区为止，然后再按照作业的大小，从该分区中划出一块内存空间分配给请求者，剩余空闲分区仍留在空闲链中。
+
+2） 循环首次适应 NF 算法：在为进程分配内存空间时，不再是每次都从链首开始查找，而是从上一次找到的空闲分区的下一个空闲分区开始查找，直至找到满足要求的空闲分区，从中划分出一块满足要求大小的内存空间分配给作业。
+
+3） 最佳适应 BF 算法：每次为作业分配内存时，总是把能满足要求，又是最小的空闲分区分配给作业。要求将所有的空闲分区按其容量以从小到大的顺序形成一空闲分区链。这样，第一次找到的能满足要求的空闲区，必然是最佳的。
+
+4） 最坏适应 WF 算法：要扫描整个空闲分区表或链表，总是挑选一个最大的空闲分区分割给作业，优点在于可使剩下的空闲分区不至于太小，产生碎片的几率很小。
+
+#### 页面
+
+- 页面地址结构：
+
+分页地址由页号，偏移量（页内地址）组成。如下例：<img src="http://ruoruochen-img-bed.oss-cn-beijing.aliyuncs.com/img/image-20210518130129913.png" alt="image-20210518130129913" style="zoom: 33%;" />
+
+图中的地址长度为32位，其中0～11位为页内地址，即每页的大小为4 KB；12～31位为页号，地址空间最多允许有1M页（2^20页）。
+
+若给定一个逻辑地址空间中的地址为A，页面的大小为L，则页号P和页内地址d可 按下式求得：<img src="http://ruoruochen-img-bed.oss-cn-beijing.aliyuncs.com/img/image-20210518130405962.png" alt="image-20210518130405962" style="zoom:50%;" /><img src="http://ruoruochen-img-bed.oss-cn-beijing.aliyuncs.com/img/image-20210518130426216.png" alt="image-20210518130426216" style="zoom:50%;" />
+
+其中，INT代表取整，MOD是取余函数。
+
+例如，如果系统的页面大小为 1KB，设A = 2170 B，则由上式可以求得：
+
+ P = 2，d = 122
+
+#### 什么是虚拟存储器
+
+虚拟存储器：具有请求调入功能和置换功能，能从逻辑上对内存容量加以扩充的一种存储器系统。
+
+#### 页面置换算法有哪些？说一下他们的优缺点
+
+1. 最佳置换算法：所选择被淘汰的页面，是以后永远不使用的，或许是在最长(未来)时间内不再被访问的页面。
+
+   是一种理想情况的算法，无法实现。
+
+2. 先进先出FIFO页面置换算法：总是淘汰最先进入内存的页面，即选择在内存中驻留时间最长的页面予以淘汰。
+
+   算法简单，容易实现，性能差。
+
+3. 最近最久未使用 LRU 置换算法：选择最近、最久未使用的页面予以淘汰。该算法赋予每个页面一个访问字段，用来记录一个页面自上次被访问以来所经历的时间t，当须淘汰一个页面时， 选择现有页面中其t值最大的，即最近最久未使用的页面予以淘汰。
+
+   性能较好
 
