添加红宝书笔记 对象

--- a/红宝书读书笔记/红宝书笔记.md
+++ b/红宝书读书笔记/红宝书笔记.md
@@ -1908,11 +1908,159 @@ console.log(person);//{ name_0: 'Tom', age_1: 18, job_2: 'stu' }
 
 4、对象解构，是使用与对象匹配的结构来实现对象属性赋值。
 
-### 8.2 创建对象
+### 8.3 继承
 
-- Object 类型有一个方法叫 `Object.getPrototypeOf()`，返回参数的内部特性
+#### 8.3.1 原型链继承
 
-`[[Prototype]]`的值。
+子类的原型为父类实例，这样根据原型链，子类就可以访问到父类的属性和方法。
 
-- Object 类型还有一个 `setPrototypeOf()`方法，可以向实例的私有特性`[[Prototype]]`写入一个新值。这样就可以重写一个对象的原型继承关系，但`Object.setPrototypeOf()`可能会严重影响代码性能，应避免使用 Object.setPrototypeOf()。
+```js
+function Father(){
+    this.name = 'father';
+}
+
+Father.prototype.sayName = function(){
+    console.log(this.name);
+}
+
+function Son(){
+    this.age = 18;
+}
+
+//原型链继承
+Son.prototype = new Father();
+
+Son.prototype.sayAge = function(){
+    console.log(this.age);
+}
+
+let son = new Son();
+son.sayName();//father
+son.sayAge();//18
+```
+
+优点：实现方便、简单。
+
+缺点：
+
+1. 原型中包含引用值，会在所有实例间共享。
+2. 子类不能给父类传参
+
+#### 8.3.2 构造函数继承
+
+在子类构造函数中调用父类构造函数。 通过使用`call()`或`apply()`方法以当前this执行父类构造函数。
+
+```js
+function Father(){
+    this.colors = ['red','pink'];
+}
+
+function Son(){
+    Father.call(this);
+}
+
+let son1 = new Son();
+son1.colors.push('yellow');
+console.log(son1.colors);//['red','pink','yellow']
+
+let son2 = new Son();
+console.log(son2.colors);//['red','pink']
+```
+
+优先：子类可向父类传递参数
+
+缺点：
+
+1. 子类无法使用父类prototype上的方法
+2. 父类构造函数中的方法会被反复执行，不能重用。
+
+#### 8.3.3 组合继承
+
+综合原型链继承和构造函数继承，将两者优点集中起来，即有自己属性，又能复用原型上的方法。
+
+通过原型链继承继承原型上的属性和方法，通过构造函数继承继承实例属性。
+
+```js
+function Father(name){
+    this.name = name;
+    this.colors = ['red','pink'];
+}
+
+Father.prototype.sayName = function(){
+    console.log(this.name);
+}
+
+function Son(name,age){
+    Father.call(this,name);
+    this.age = age;
+}
+
+Son.prototype = new Father();
+
+Son.prototype.sayAge = function(){
+    console.log(this.age);
+}
+
+let son1 = new Son('Lisa',18);
+son1.colors.push('pink');
+console.log(son1.colors);//['red','pink','pink']
+son1.sayName();//Lisa
+
+let son2 = new Son('Tom',50);
+console.log(son2.colors);//['red','pink']
+son2.sayName();//Tom
+son2.sayAge();//50
+```
+
+优点：
+
+1. 父类引用数据不会共享
+2. 子类可以给父类传参
+3. 子类可以共享父类原型上的方法
+
+#### 8.3.4 原型式继承
+
+创建一个临时构造函数，将一个对象object作为构造函数的原型，返回这个临时构造函数的实例。本质上是对object对象的浅复制。
+
+```js
+function Object(o){
+    function F(){};
+    F.prototype = o;
+    return new F();
+}
+
+const o = {
+    name:'Sherry',
+    friend:['1','2'],
+    age:19
+}
+
+let instance1 = Object(o);
+let instance2 = Object(o);
+instance1.friend.push('3');
+console.log(instance2.friend);// 1 2 3
+```
+
+ECMAScript 5 通过增加 Object.create()方法将原型式继承的概念规范化了。
+
+#### 8.3.5 寄生式继承
+
+通过原型式继承的方法创建一个实例，然后为这个实例添加属性和方法，最后返回这个实例。
+
+```js
+function createObject(o){
+    let myobj = Object.create(o);
+    myobj.sagHaha = function(){
+        console.log('hahaha');
+    }
+    return myobj;
+}
+
+const o = {
+    name:'xixi',
+    age:109
+}
+let instance = createObject(o);
+instance.sayHaha();
+```
 
