添加红宝书笔记

--- a/红宝书读书笔记/红宝书笔记.md
+++ b/红宝书读书笔记/红宝书笔记.md
@@ -2064,3 +2064,381 @@ let instance = createObject(o);
 instance.sayHaha();
 ```
 
+#### 8.3.6 寄生式组合继承
+
+对组合继承的优化，在组合继承中父类构造函数被调用了两次：在修改子类原型时调用、子类构造函数中调用。
+
+优化：子类构造函数在执行时重写原型。
+
+```js
+function  inherit(Parent,Child){
+    const prototype = Object.create(Parent.prototype);
+	prototype.constructor = Child;
+    Child.prototype = prototype;
+}
+
+function Father(){
+    this.friends = [1,2,3];
+}
+
+function Son(){
+    Father.call(this);
+    this.age=18;
+}
+
+Son.prototype.sayAge = function(){
+    console.log(this.age);
+}
+
+inherit(Father,Son)
+
+```
+
+### 8.4 类
+
+#### 8.4.1 类定义
+
+定义类：类声明和类表达式，使用`class`
+
+```js
+// 类声明
+class Person {} 
+// 类表达式
+const Animal = class {};
+```
+
+**类定义与函数声明的区别**
+
+- 函数声明可以提升，但是类定义不能。
+
+```js
+console.log(FunctionDeclaration); // FunctionDeclaration() {} 
+function FunctionDeclaration() {} 
+console.log(FunctionDeclaration); // FunctionDeclaration() {} 
+
+console.log(ClassDeclaration); // ReferenceError: ClassDeclaration is not defined 
+class ClassDeclaration {} 
+console.log(ClassDeclaration); // class ClassDeclaration {}
+```
+
+- 函数受函数作用域限制，类受块作用域限制。
+
+```js
+{ 
+ function FunctionDeclaration() {} 
+ class ClassDeclaration {} 
+} 
+
+console.log(FunctionDeclaration); // FunctionDeclaration() {} 
+console.log(ClassDeclaration); // ReferenceError: ClassDeclaration is not defined
+```
+
+#### 8.4.1 类构造函数
+
+`constructor`
+
+使用new会执行以下操作：
+
+(1) 在内存中创建一个新对象。
+
+(2) 这个新对象内部的[[Prototype]]指针被赋值为构造函数的 prototype 属性。
+
+(3) 构造函数内部的 this 被赋值为这个新对象（即 this 指向新对象）。
+
+(4) 执行构造函数内部的代码（给新对象添加属性）。
+
+(5) **如果构造函数返回非空对象，则返回该对象；否则，返回刚创建的新对象。**
+
+**默认情况下，类构造函数执行之后返回this对象，如果手动写了返回的对象，则会返回手动写的对象，此时这个对象instanceof 类名为false**
+
+#### 8.4.2 实例、原型和类成员
+
+- 在类块中定义的方法将作为原型方法，在实例间共享。
+
+```js
+class Person { 
+     constructor() { 
+     // 添加到 this 的所有内容都会存在于不同的实例上
+    	 this.locate = () => console.log('instance'); 
+     } 
+     // 在类块中定义的所有内容都会定义在类的原型上
+     locate() { 
+     	console.log('prototype'); 
+     } 
+} 
+
+let p = new Person(); 
+p.locate(); // instance 
+Person.prototype.locate(); // prototype
+```
+
+
+
+- 类方法等同于对象属性，因此可以使用字符串、符号或计算的值作为键：
+
+```js
+const symbolKey = Symbol('symbolKey'); 
+class Person { 
+     stringKey() { 
+    	 console.log('invoked stringKey'); 
+     } 
+     [symbolKey]() { 
+     	console.log('invoked symbolKey'); 
+     } 
+     ['computed' + 'Key']() { 
+    	 console.log('invoked computedKey'); 
+     } 
+} 
+
+let p = new Person(); 
+p.stringKey(); // invoked stringKey 
+p[symbolKey](); // invoked symbolKey 
+p.computedKey(); // invoked computedKey
+```
+
+- 静态方法，使用`static`作为前缀，`this`指向类自身。
+
+```js
+class Person { 
+     constructor() { 
+     // 添加到 this 的所有内容都会存在于不同的实例上
+    	 this.locate = () => console.log('instance', this); 
+     } 
+     // 定义在类的原型对象上
+     locate() { 
+   		 console.log('prototype', this); 
+     } 
+     // 定义在类本身上
+     static locate() { 
+     	console.log('class', this); 
+     } 
+} 
+let p = new Person(); 
+p.locate(); // instance, Person {} 
+Person.prototype.locate(); // prototype, {constructor: ... } 
+Person.locate(); // class, class Person {}
+```
+
+#### 8.4.3 继承
+
+**1、`extends`实现单继承**
+
+- 可以继承一个类、普通的构造函数或内置类型Array/String等。
+
+- 派生类会通过原型链访问到类和原型上的方法，其实的`this`反映调用的实例或类
+
+```js
+class Vehicle { 
+     identifyPrototype(id) { 
+    	 console.log(id, this); 
+     }
+     static identifyClass(id) { 
+   		 console.log(id, this); 
+     } 
+} 
+class Bus extends Vehicle {} 
+let v = new Vehicle(); 
+let b = new Bus(); 
+
+b.identifyPrototype('bus'); // bus, Bus {} (this指向调用的实例对象)
+v.identifyPrototype('vehicle'); // vehicle, Vehicle {} (this指向调用的实例对象)
+Bus.identifyClass('bus'); // bus, class Bus {} 
+Vehicle.identifyClass('vehicle'); // vehicle, class Vehicle {}
+```
+
+**2、super**
+
+使用注意事项：
+
+- 只能在派生类的构造函数和静态方法中使用。
+- 调用 super()会调用父类构造函数，并将返回的实例赋值给 `this`。
+- 不能在调用 super()之前引用 this。
+- 派生类没有构造函数，实例化时则自动调用super，并将所有参数传给父类。
+- 如果在派生类中显式定义了构造函数，则要么必须在其中调用 `super()`，要么必须在其中返回一个对象。
+
+**3、抽象基类**
+
+定义：供其他类继承，但本身不能被实例化。
+
+抽象基类的实现：
+
+1、阻止对抽象类实例化。`new.target` 保存通过 `new` 关键字调用的类或函数。通过在实例化时检测 `new.target` 是不是抽象基类，如果是，则抛出错误。
+
+2、实现类需实现抽象类中的所有方法。通过this检查是否包含某个方法，如果没有，则抛出错误。
+
+```js
+// 抽象基类
+class Vehicle { 
+     constructor() { 
+         if (new.target === Vehicle) { 
+              throw new Error('Vehicle cannot be directly instantiated'); 
+         } 
+         if (!this.foo) { 
+        	 throw new Error('Inheriting class must define foo()'); 
+         } 
+         console.log('success!'); 
+     } 
+} 
+// 派生类
+class Bus extends Vehicle { 
+	 foo() {} 
+} 
+// 派生类
+class Van extends Vehicle {} 
+new Bus(); // success! 
+new Van(); // Error: Inheriting class must define foo()
+```
+
+**4、类混入**
+
+>对象混入使用Object.assign()
+
+通过类混入实现多继承。
+
+类混入实现：定义一组“可嵌套”的函数，每个函数分别接收一个超类作为参数，而将混入类定义为这个参数的子类，并返回这个类。这些组合函数可以连缀调用，最终组合成超类表达式。
+
+```js
+class Vehicle {} 
+let FooMixin = (Superclass) => class extends Superclass { 
+     foo() { 
+     	console.log('foo'); 
+     } 
+}; 
+let BarMixin = (Superclass) => class extends Superclass { 
+     bar() { 
+     	console.log('bar'); 
+     } 
+}; 
+let BazMixin = (Superclass) => class extends Superclass { 
+     baz() { 
+     	console.log('baz'); 
+     } 
+}; 
+function mix(BaseClass, ...Mixins) { 
+	 return Mixins.reduce((accumulator, current) => current(accumulator), BaseClass); 
+} 
+
+class Bus extends mix(Vehicle, FooMixin, BarMixin, BazMixin) {} 
+let b = new Bus(); 
+b.foo(); // foo 
+b.bar(); // bar 
+b.baz(); // baz
+```
+
+## 第九章 代理Proxy与反射Reflect
+
+### 9.1 Proxy代理
+
+代理是目标对象的抽象,代理是使用 `Proxy` 构造函数创建的，接收两个参数：目标对象和处理程序对象。（**缺一不可**）
+
+- 在代理对象上执行的任何操作实际上都会应用到目标对象。
+- 只有在代理对象上执行这些操作才会触发捕获器。在目标对象上执行这些操作仍然会产生正常的行为。
+
+#### 9.1.1 捕获器参数和Reflect API
+
+所有捕获器都可以访问相应的参数，比如，`get()`捕获器会接收到目标对象、要查询的属性和代理对象三个参数，基于这些参数可以重建被捕获方法的原始行为，实现：
+
+调用全局 Reflect 对象上（封装了原始行为）的同名方法来轻松重建。
+
+```js
+const target = { 
+	 foo: 'bar' 
+}; 
+const handler = { 
+     get() { 
+     	return Reflect.get(...arguments); 
+     } 
+}; 
+
+const proxy = new Proxy(target, handler); 
+console.log(proxy.foo); // bar 
+console.log(target.foo); // bar
+```
+
+#### 9.1.2 可撤销代理
+
+使用 `new Proxy()` 创建的普通代理来说，会在代理对象的生命周期内一直持续存在。
+
+如果我们预测到，未来某个时间点会撤销代理，那么我们可以使用`Proxy.revocable()`方法创建代理，在某个时间点，调用`revoke()`方法即可撤销代理。撤销代理之后再调用代理会抛出 TypeError。
+
+```js
+const target = { 
+	 foo: 'bar' 
+}; 
+const handler = { 
+     get() { 
+     	return 'intercepted'; 
+     } 
+}; 
+
+const { proxy, revoke } = Proxy.revocable(target, handler); 
+console.log(proxy.foo); // intercepted 
+console.log(target.foo); // bar 
+revoke(); 
+console.log(proxy.foo); // TypeError
+```
+
+### 9.2 代理捕获器和反射Reflect方法
+
+代理可以捕获 13 种不同的基本操作，这些操作有各自不同的反射 API 方法、参数等。
+
+1. Reflect.get()：可以替代对象属性访问操作符。
+2. Reflect.set()：可以替代=赋值操作符。
+3. Reflect.has()：可以替代 in 操作符或 with()。 
+4. Reflect.deleteProperty()：可以替代 delete 操作符。
+5. Reflect.construct()：可以替代 new 操作符。
+6. Reflect.defineProperty()
+7. Reflect.preventExtensions()
+8. Reflect.setPrototypeOf()
+9. Reflect.set()
+10. Reflect.deleteProperty()
+
+#### 9.2.1 get()
+
+get()捕获器会在获取属性值的操作中被调用。对应的反射 API 方法为 Reflect.get()。
+
+**1、返回值**：无限制
+
+**2、捕获器处理程序参数**
+
+-  target：目标对象。
+- property：引用的目标对象上的字符串键属性。
+-  receiver：代理对象或继承代理对象的对象。
+
+#### 9.2.2 set()
+
+set()捕获器会在设置属性值的操作中被调用。对应的反射 API 方法为 Reflect.set()。
+
+**1、返回值**：返回 true 表示成功；返回 false 表示失败，严格模式下会抛出 TypeError。
+
+**2、捕获器处理程序参数**
+
+- target：目标对象。
+
+- property：引用的目标对象上的字符串键属性。
+
+- value：要赋给属性的值。
+
+- receiver：接收最初赋值的对象。
+
+#### 9.2.3 has()
+
+has()捕获器会在 in 操作符中被调用。对应的反射 API 方法为 Reflect.has()
+
+**1、返回值**：has()必须返回布尔值，表示属性是否存在。
+
+**2、捕获器处理程序参数**：
+
+- target：目标对象。
+
+- property：引用的目标对象上的字符串键属性。
+
+### 9.3 代理模式/代理Proxy的应用
+
+跟踪属性访问
+
+隐藏属性
+
+属性验证
+
+函数或构造函数参数验证
