增加函数笔记

--- a/红宝书读书笔记/红宝书笔记.md
+++ b/红宝书读书笔记/红宝书笔记.md
@@ -2442,3 +2442,125 @@ has()捕获器会在 in 操作符中被调用。对应的反射 API 方法为 Re
 属性验证
 
 函数或构造函数参数验证
+
+## 第十章 函数
+
+### 10.1 函数内部对象
+
+函数内部对象有：`arguments`、`this`、`caller`、`new.target`
+
+**arguments**
+
+- arguments 对象，它是一个类数组对象，包含调用函数时传入的所有参数。
+
+- arguments 对象有一个 callee 属性，是一个指向 arguments 对象所在函数的指针，其应用：函数逻辑与函数名解耦。
+
+>我们假设一个场景，递归函数。函数名为factorial，在递归中一直调用的都是factorial，如果在递归的过程中，factorial被外界修改了，这时候，递归中调用的是修改后的factorial，不符合我们一开始的设想了。
+>
+>怎么办？使用 **arguments.callee**递归调用，解决。
+>
+>严格模式下callee报错，如何解决？使用命名函数表达式。
+>
+>```js
+>const factorial = (function f(num) { 
+>     if (num <= 1) { 
+>     	return 1; 
+>     } else { 
+>     	return num * f(num - 1); 
+>     } 
+>});
+>```
+>
+>在外界无法访问到f
+
+**this**
+
+this一般指向调用它的对象。在箭头函数中，this引用的是定义箭头函数的上下文。
+
+**caller**
+
+`caller`：调用当前函数的函数，或者如果是在全局作用域中调用的则为 null。
+
+```js
+function outer() { 
+ 	inner(); 
+} 
+function inner() { 
+    console.log(inner.caller); //显示outer函数的代码
+} 
+outer();
+```
+
+**new.target**
+
+如果函数正常调用，则`new.target`为undefined；如果使用`new`关键字，则`new.target`为被调用的构造函数。
+
+# 第十一章 承诺Promise与异步函数
+
+### 11.1 Async 和 Await异步函数
+
+#### 11.1.1 异步函数的应用
+
+**1、实现sleep**
+
+实现sleep在非阻塞时暂停。
+
+```js
+function sleep(time){
+    return new Promise(resolve=>setTimeout(resolve,time));
+}
+
+async function foo(){
+    const time = Date.now();
+    await sleep(5000);//等待5s
+    console.log(Date.now() - time);
+}
+
+foo();//5009
+```
+
+# 第12章 BOM
+
+BOM 的核心是 window 对象，表示浏览器的实例。window 对象在浏览器中有两重身份，一个是ECMAScript 中的 Global 对象，另一个就是浏览器窗口的 JavaScript 接口。
+
+### 12.1 window对象
+
+#### 12.1.1 窗口关系
+
+window.parent、window.top 和 window.self
+
+- parent 对象则始终指向当前窗口的父窗口
+- top 对象始终指向最上层（最外层）窗口，即浏览器窗口本身
+- self 对象，它是终极 window 属性，始终会指向 window。
+
+#### 12.1.2 窗口位置
+
+screenLeft 和screenTop 属性，用于表示窗口相对于屏幕左侧和顶部的位置。
+
+**位置移动：**使用 moveTo()和 moveBy()方法移动窗口，这两个方法都接收两个参数。
+
+- moveTo()接收要移动到的新位置的绝对坐标 *x* 和 *y*；
+- moveBy()则接收相对当前位置在两个方向上移动的像素数。
+
+这俩方法可能会被部分或全部禁用。
+
+#### 12.1.3 窗口大小
+
+innerWidth、innerHeight、outerWidth 和 outerHeight
+
+- outerWidth、outerHeight返回浏览器窗口自身大小
+- innerWidth、innerHeight返回浏览器窗口中页面视口的大小（不包含浏览器边框和工具栏）。
+- document.documentElement.clientWidth 和 document.documentElement.clientHeight返回页面视口的宽度和高度。
+
+兼容IE与DOM浏览器，获取窗口中文档显示区域的宽度及高度：(IE不支持innerWidth、innerHeight、outerWidth 和 outerHeight)
+
+```js
+windows.innerWidth ? windows.innerWidth : document.body.clientWidth;
+```
+
+**改变窗口大小：**使用resizeTo()和resizeBy()方法调整窗口大小。这两个方法都接收两个参数。
+
+- resizeTo()接收新的宽度和高度值
+- resizeBy()接收宽度和高度各要缩放多少
+
+缩放窗口的方法可能会被浏览器禁用
